@@ -1,17 +1,17 @@
-# $NetBSD: Makefile,v 1.4 2004/01/23 21:50:42 jmmv Exp $
+# $NetBSD: Makefile,v 1.5 2004/03/10 11:59:31 xtraeme Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 XFCE4_VERSION=	0.1.1
 
 DISTNAME=	xfce4-xmms-plugin-${XFCE4_VERSION}
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	audio
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
 COMMENT=	XFce4 XMMS plugin
 
 EXTRACT_SUFX=	.tar.bz2
 
-.include "../../audio/xmms/buildlink2.mk"
-.include "../../x11/xfce4-panel/buildlink2.mk"
+.include "../../audio/xmms/buildlink3.mk"
+.include "../../x11/xfce4-panel/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
