@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.4 2004/01/23 21:50:48 jmmv Exp $
+# $NetBSD: Makefile,v 1.5 2004/03/10 11:59:31 xtraeme Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 XFCE4_VERSION=	1.4
 
 DISTNAME=	xfce4-diskperf-plugin-${XFCE4_VERSION}
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
 COMMENT=	XFce4 disk performance plugin
 
-.include "../../x11/xfce4-panel/buildlink2.mk"
+.include "../../x11/xfce4-panel/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
